--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -5,7 +5,7 @@
       <li><a href="#" data-toggle="search" class="nav-link nav-link-lg d-sm-none"><i class="fas fa-search"></i></a></li>
     </ul>
     <div class="search-element">
-      <input class="form-control" type="search" placeholder="Search" aria-label="Search" data-width="250">
+      <input class="form-control" type="search" placeholder="Caută" aria-label="Caută" data-width="250">
       <button class="btn" type="submit"><i class="fas fa-search"></i></button>
       <div class="search-backdrop"></div>
       <div class="search-result">
@@ -68,6 +68,7 @@
     </div>
   </form>
   <ul class="navbar-nav navbar-right">
+    <!-- Messages -->
     <li class="dropdown dropdown-list-toggle"><a href="#" data-toggle="dropdown" class="nav-link nav-link-lg message-toggle beep"><i class="far fa-envelope"></i></a>
       <div class="dropdown-menu dropdown-list dropdown-menu-right">
         <div class="dropdown-header">Messages
@@ -134,6 +135,7 @@
         </div>
       </div>
     </li>
+    <!-- Notifications -->
     <li class="dropdown dropdown-list-toggle"><a href="#" data-toggle="dropdown" class="nav-link notification-toggle nav-link-lg beep"><i class="far fa-bell"></i></a>
       <div class="dropdown-menu dropdown-list dropdown-menu-right">
         <div class="dropdown-header">Notifications
@@ -193,25 +195,38 @@
         </div>
       </div>
     </li>
-    <li class="dropdown"><a href="#" data-toggle="dropdown" class="nav-link dropdown-toggle nav-link-lg nav-link-user">
-      <%= image_tag('avatar/avatar-1.png', class: 'rounded-circle mr-1') %>
-      <div class="d-sm-none d-lg-inline-block">Hi, Ujang Maman</div></a>
-      <div class="dropdown-menu dropdown-menu-right">
-        <div class="dropdown-title">Logged in 5 min ago</div>
-        <a href="features-profile.html" class="dropdown-item has-icon">
-          <i class="far fa-user"></i> Profile
+    <!-- Log in link / Profile menu -->
+    <% if admin_signed_in? %>
+      <li class="dropdown">
+        <!-- Dropdown toggle -->
+        <a href="#" data-toggle="dropdown" class="nav-link dropdown-toggle nav-link-lg nav-link-user">
+          <%= image_tag('avatar/avatar-1.png', class: 'rounded-circle mr-1') %>
+          <div class="d-sm-none d-lg-inline-block">
+            <% if admin_signed_in? %>
+              <%= current_admin.name %>
+            <% else %>
+              Autentificare
+            <% end %>
+          </div>
         </a>
-        <a href="features-activities.html" class="dropdown-item has-icon">
-          <i class="fas fa-bolt"></i> Activities
-        </a>
-        <a href="features-settings.html" class="dropdown-item has-icon">
-          <i class="fas fa-cog"></i> Settings
-        </a>
-        <div class="dropdown-divider"></div>
-        <a href="#" class="dropdown-item has-icon text-danger">
-          <i class="fas fa-sign-out-alt"></i> Logout
-        </a>
-      </div>
-    </li>
+        <!-- Dropdown menu -->
+        <div class="dropdown-menu dropdown-menu-right">
+          <div class="dropdown-title">Stare: <span class="text-success">Conectat</span></div>
+          <a href="features-profile.html" class="dropdown-item has-icon">
+            <i class="far fa-user"></i> Profil
+          </a>
+          <a href="features-activities.html" class="dropdown-item has-icon">
+            <i class="fas fa-bolt"></i> Activități
+          </a>
+          <a href="features-settings.html" class="dropdown-item has-icon">
+            <i class="fas fa-cog"></i> Setări
+          </a>
+          <div class="dropdown-divider"></div>
+          <%= link_to("<i class=\"fas fa-sign-out-alt\"></i> Deautentificare".html_safe, destroy_admin_session_path, method: :delete, class: "dropdown-item has-icon text-danger") %>
+        </div>
+      </li>
+    <% else %>
+      <%= link_to("Autentificare", new_admin_session_path, class: "nav-link nav-link-lg nav-link-user mt-1") %>
+    <% end %>
   </ul>
 </nav>
