--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -9,24 +9,24 @@
     <ul class="sidebar-menu" data-controller="sidebar">
       <li class="<%= active_nav_item('home', 'index') %>">
         <%= link_to root_path, class: "nav-link" do %>
-          <i class="fab fa-fire" style="font-size: 16px;"></i> <span>Dashboard</span>
+          <i class="fab fa-fire" style="font-size: 16px;"></i> <span>Panou de control</span>
         <% end %>
       </li>
 
       <li class="<%= active_nav_item('students', 'index') %>">
         <%= link_to students_path, class: "nav-link" do %>
-          <i class="fas fa-user-graduate"></i> <span>Students</span>
+          <i class="fas fa-user-graduate"></i> <span>Elevi</span>
         <% end %>
       </li>
 
       <li class="<%= active_nav_item('grades', 'index') %>">
         <%= link_to grades_path, class: "nav-link" do %>
-          <i class="fab fa-users-class"></i> <span>Grades</span>
+          <i class="fab fa-users-class"></i> <span>Clase</span>
         <% end %>
       </li>
 
-      <li class="menu-header">Controllers</li>
-      <%= render 'shared/sidebar_dropdown', title: 'Resources', icon: 'fas fa-file-alt' do %>
+      <li class="menu-header">Controlori</li>
+      <%= render 'shared/sidebar_dropdown', title: 'Resurse', icon: 'fas fa-file-alt' do %>
       
 <!--         <li class="<%= active_nav_item('students', crud_actions) %>">
           <%= link_to 'Students', students_path, class: 'nav-link' %>
