--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -1,21 +1,21 @@
 <%= form_with(model: student, data: { controller: 'validation' }) do |form| %>
   <div class="form-group">
-    <%= form.label :balance %>
-    <%= form.number_field :balance, class: 'form-control' %>
-  </div>
-  <div class="form-group">
-    <%= form.label :first_name %>
+    <%= form.label :first_name, "Prenume" %>
     <%= form.text_field :first_name, class: 'form-control' %>
   </div>
   <div class="form-group">
-    <%= form.label :last_name %>
+    <%= form.label :last_name, "Nume de familie" %>
     <%= form.text_field :last_name, class: 'form-control' %>
   </div>
   <div class="form-group">
-    <%= form.label :grade_id %>
-    <%= form.collection_select(:grade_id, Grade.all, :id, :to_s, {}, { class: 'form-control', data: { controller: 'select' } }) %>
+    <%= form.label :balance, "Bani" %>
+    <%= form.number_field :balance, class: 'form-control', value: student.balance || 0 %>
+  </div>
+  <div class="form-group">
+    <%= form.label :grade_id, "Clasă" %>
+    <%= form.collection_select(:grade_id, Grade.all, :id, :name, {}, { class: 'form-control', data: { controller: 'select' } }) %>
   </div>
   <div class="card-footer pl-0">
-    <%= form.submit class: 'btn btn-success' %>
+    <%= form.submit "Creează Elev", class: 'btn btn-success' %>
   </div>
 <% end %>
