--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,21 +1,21 @@
 <section class="section">
   <div class="section-header d-mobile-none">
-    <h1>Students</h1>
+    <h1>Elevi</h1>
     <div class="section-header-breadcrumb">
-      <div class="breadcrumb-item"><%= link_to 'Dashboard', root_path %></div>
-      <div class="breadcrumb-item">List of Students</div>
+      <div class="breadcrumb-item"><%= link_to 'Panou de control', root_path %></div>
+      <div class="breadcrumb-item">Lista elevilor</div>
     </div>
   </div>
 
   <div class="section-body">
     <div class="card">
       <div class="card-header">
-        <h4>List of Students</h4>
+        <h4>Lista elevilor</h4>
         <div class="card-header-action">
-          <%= link_to icon('fas fa-plus', 'New Student'), new_student_path, class: 'btn btn-icon icon-left btn-primary' %>
+          <%= link_to icon('fas fa-plus', 'Adaugă un elev'), new_student_path, class: 'btn btn-icon icon-left btn-primary' %>
           <%= render 'shared/card_dropdown' do %>
-            <%= link_to icon('fas fa-download', 'Export Data'), students_path(format: :csv, q: request.params[:q]), class: 'dropdown-item has-icon' %>
-            <%= link_to icon('fas fa-print', 'Print Page'), 'javascript:window.print()', class: 'dropdown-item has-icon' %>
+            <%= link_to icon('fas fa-file-export', 'Exportă datele'), students_path(format: :csv, q: request.params[:q]), class: 'dropdown-item has-icon' %>
+            <%= link_to icon('fas fa-print', 'Tipărește pagina'), 'javascript:window.print()', class: 'dropdown-item has-icon' %>
           <% end %>
         </div>
       </div>
@@ -34,34 +34,71 @@
           <table class="table table-striped table-md">
             <thead>
               <tr>
-                <th><%= sort_link_turbo(@search, :balance) %></th>
-                <th><%= sort_link_turbo(@search, :first_name) %></th>
-                <th><%= sort_link_turbo(@search, :last_name) %></th>
-                <th><%= sort_link_turbo(@search, :grade) %></th>
-                <th>Actions</th>
+                <th><%= sort_link_turbo(@search, :first_name, "Prenume") %></th>
+                <th><%= sort_link_turbo(@search, :last_name, "Nume") %></th>
+                <th><%= sort_link_turbo(@search, :balance, "Bani rămași") %></th>
+                <th><%= sort_link_turbo(@search, :grade, "Clasa") %></th>
+                <th>Acțiuni</th>
               </tr>
             </thead>
             <tbody data-target="infinite-page.container">
               <% @students.each do |student| %>
                 <tr data-target="infinite-page.item">
-                  <td><%= student.balance %></td>
-                  <td><%= student.first_name %></td>
-                  <td><%= student.last_name %></td>
-                  <td><%= student.grade %></td>
+                  <td><%= link_to student.first_name, student, style: "color: inherit;" %></td>
+                  <td><%= link_to student.last_name, student, style: "color: inherit;" %></td>
+                  <td class="student-balance" id="<%= student.id %>"><%= student.balance %></td>
+                  <td><%= link_to student.grade.name, student.grade, style: "color: inherit;" %></td>
                   <td>
-                    <%= link_to icon('fas fa-eye'), student, title: 'Show it', class: 'btn btn-icon btn-sm btn-info mr-1' %>
-                    <%= link_to icon('fas fa-edit'), edit_student_path(student), title: 'Edit it', class: 'btn btn-icon btn-sm btn-warning mr-1' %>
-                    <%= link_to icon('fas fa-trash'), student, title: 'Destroy it', class: 'btn btn-icon btn-sm btn-danger', method: :delete, data: { confirm: 'Are you sure?', remote: true } %>
+                    <%= link_to icon('fas fa-eye'), student, title: 'Vizualizează', class: 'btn btn-icon btn-sm btn-info mr-1' %>
+                    <%= link_to icon('fas fa-edit'), edit_student_path(student), title: 'Modifică', class: 'btn btn-icon btn-sm btn-warning mr-1' %>
+
+                    <button type="button" class="btn btn-icon btn-sm btn-success mr-1 add-money" id="<%= student.id %>" title="Adaugă bani">
+                      <i class="fas fa-plus"></i>
+                    </button>
+
+                    <button type="button" class="btn btn-icon btn-sm btn-danger mr-1 remove-money" id="<%= student.id %>" title="Scade bani">
+                      <i class="fas fa-minus"></i>
+                    </button>
+
+                    <%= form_tag change_money_path, method: :put, class: "add-money-form form-inline add-money-#{student.id}", style: "display: inline;", remote: true do %>
+                      <%= text_field_tag :change_money, params[:change_money], style: "width: 60px;" %>
+                      <%= hidden_field_tag :id, student.id %>
+                      <%= hidden_field_tag :operation, '+' %>
+                      <%= submit_tag "Adaugă", class: "btn btn-success btn-sm submit-change-form" %>
+                    <% end %>
+
+                    <%= form_tag change_money_path, method: :put, class: "remove-money-form form-inline remove-money-#{student.id}", style: "display: inline;", remote: true do %>
+                      <%= text_field_tag :change_money, params[:change_money], style: "width: 60px;" %>
+                      <%= hidden_field_tag :id, student.id %>
+                      <%= hidden_field_tag :operation, '-' %>
+                      <%= submit_tag "Scade", class: "btn btn-danger btn-sm submit-change-form" %>
+                    <% end %>
+
                   </td>
                 </tr>
               <% end %>
             </tbody>
           </table>
-          <%= link_to 'Next page', students_path(page: @page.next_number, q: request.params[:q]), data: { target: 'infinite-page.more' } unless @page.last? %>
+          <%= link_to 'Următoarea pagină', students_path(page: @page.next_number, q: request.params[:q]), data: { target: 'infinite-page.more' } unless @page.last? %>
         </div>
       </div>
     </div>
   </div>
 </section>
 
-<% content_for(:page_title, 'List of Students') %>
+<script>
+  $( ".add-money-form" ).hide();
+  $( ".remove-money-form" ).hide();
+
+  $( ".add-money" ).click(function() {
+    $( ".add-money-" + this.id ).toggle(300);
+    $( ".remove-money-form" ).hide(300);
+  });
+
+  $( ".remove-money" ).click(function() {
+    $( ".remove-money-" + this.id ).toggle(300);
+    $( ".add-money-form" ).hide(300);
+  });
+</script>
+
+<% content_for(:page_title, 'Lista elevilor') %>
