--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -2,15 +2,15 @@
   <div class="section-header d-mobile-none">
     <h1>Students</h1>
     <div class="section-header-breadcrumb">
-      <div class="breadcrumb-item"><%= link_to 'Dashboard', root_path %></div>
-      <div class="breadcrumb-item"><%= link_to 'Students', students_path %></div>
-      <div class="breadcrumb-item">New Student</div>
+      <div class="breadcrumb-item"><%= link_to 'Panou de control', root_path %></div>
+      <div class="breadcrumb-item"><%= link_to 'Elevi', students_path %></div>
+      <div class="breadcrumb-item">Adaugă un elev</div>
     </div>
   </div>
   <div class="section-body">
     <div class="card">
       <div class="card-header">
-        <h4>New Student</h4>
+        <h4>Adaugă un elev</h4>
       </div>
       <div class="card-body">
         <%= render 'form', student: @student %>
@@ -19,6 +19,6 @@
   </div>
 </section>
 
-<%= link_to icon('fas fa-arrow-left', 'Back'), 'javascript:history.back()', class: 'btn btn-icon icon-left btn-secondary d-mobile-none' %>
+<%= link_to icon('fas fa-arrow-left', 'Înapoi'), 'javascript:history.back()', class: 'btn btn-icon icon-left btn-secondary d-mobile-none' %>
 
-<% content_for(:page_title, 'New Student') %>
+<% content_for(:page_title, 'Adaugă un elev') %>
