--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -9,7 +9,7 @@
     <ul class="sidebar-menu" data-controller="sidebar">
       <li class="<%= active_nav_item('home', 'index') %>">
         <%= link_to root_path, class: "nav-link" do %>
-          <i class="fab fa-fire" style="font-size: 16px;"></i> <span>Panou de control</span>
+          <i class="fab fa-columns" style="font-size: 16px;"></i> <span>Panou de control</span>
         <% end %>
       </li>
 
