--- a/app/views/grades/_form.html.erb
+++ b/app/views/grades/_form.html.erb
@@ -1,9 +1,9 @@
 <%= form_with(model: grade, data: { controller: 'validation' }) do |form| %>
   <div class="form-group">
-    <%= form.label :name %>
+    <%= form.label :name, "Nume" %>
     <%= form.text_field :name, class: 'form-control' %>
   </div>
   <div class="card-footer pl-0">
-    <%= form.submit class: 'btn btn-success' %>
+    <%= form.submit "Trimite clasa", class: 'btn btn-success' %>
   </div>
 <% end %>
