--- a/app/views/grades/index.html.erb
+++ b/app/views/grades/index.html.erb
@@ -1,21 +1,21 @@
 <section class="section">
   <div class="section-header d-mobile-none">
-    <h1>Grades</h1>
+    <h1>Clase</h1>
     <div class="section-header-breadcrumb">
-      <div class="breadcrumb-item"><%= link_to 'Dashboard', root_path %></div>
-      <div class="breadcrumb-item">List of Grades</div>
+      <div class="breadcrumb-item"><%= link_to 'Panou de control', root_path %></div>
+      <div class="breadcrumb-item">Lista claselor</div>
     </div>
   </div>
 
   <div class="section-body">
     <div class="card">
       <div class="card-header">
-        <h4>List of Grades</h4>
+        <h4>Lista claselor</h4>
         <div class="card-header-action">
-          <%= link_to icon('fas fa-plus', 'New Grade'), new_grade_path, class: 'btn btn-icon icon-left btn-primary' %>
+          <%= link_to icon('fas fa-plus', 'Adaugă o clasă'), new_grade_path, class: 'btn btn-icon icon-left btn-primary' %>
           <%= render 'shared/card_dropdown' do %>
-            <%= link_to icon('fas fa-download', 'Export Data'), grades_path(format: :csv, q: request.params[:q]), class: 'dropdown-item has-icon' %>
-            <%= link_to icon('fas fa-print', 'Print Page'), 'javascript:window.print()', class: 'dropdown-item has-icon' %>
+            <%= link_to icon('fas fa-file-export', 'Exportă datele'), grades_path(format: :csv, q: request.params[:q]), class: 'dropdown-item has-icon' %>
+            <%= link_to icon('fas fa-print', 'Tipărește pagina'), 'javascript:window.print()', class: 'dropdown-item has-icon' %>
           <% end %>
         </div>
       </div>
@@ -34,28 +34,30 @@
           <table class="table table-striped table-md">
             <thead>
               <tr>
-                <th><%= sort_link_turbo(@search, :name) %></th>
-                <th>Actions</th>
+                <th><%= sort_link_turbo(@search, :name, "Nume") %></th>
+                <th><%= sort_link_turbo(@search, :students, "Elevi") %></th>
+                <th>Acțiuni</th>
               </tr>
             </thead>
             <tbody data-target="infinite-page.container">
               <% @grades.each do |grade| %>
                 <tr data-target="infinite-page.item">
-                  <td><%= grade.name %></td>
+                  <td><%= link_to grade.name, grade, style: "color: inherit" %></td>
+                  <td><%= grade.students.size %></td>
                   <td>
-                    <%= link_to icon('fas fa-eye'), grade, title: 'Show it', class: 'btn btn-icon btn-sm btn-info mr-1' %>
-                    <%= link_to icon('fas fa-edit'), edit_grade_path(grade), title: 'Edit it', class: 'btn btn-icon btn-sm btn-warning mr-1' %>
-                    <%= link_to icon('fas fa-trash'), grade, title: 'Destroy it', class: 'btn btn-icon btn-sm btn-danger', method: :delete, data: { confirm: 'Are you sure?', remote: true } %>
+                    <%= link_to icon('fas fa-eye'), grade, title: 'Vizualizează', class: 'btn btn-icon btn-sm btn-info mr-1' %>
+                    <%= link_to icon('fas fa-edit'), edit_grade_path(grade), title: 'Modifică', class: 'btn btn-icon btn-sm btn-warning mr-1' %>
+                    <%= link_to icon('fas fa-trash'), grade, title: 'Șterge', class: 'btn btn-icon btn-sm btn-danger', method: :delete, data: { confirm: 'Doriți să ștergeți clasa și, totodată, toți elevii din ea?', remote: true } %>
                   </td>
                 </tr>
               <% end %>
             </tbody>
           </table>
-          <%= link_to 'Next page', grades_path(page: @page.next_number, q: request.params[:q]), data: { target: 'infinite-page.more' } unless @page.last? %>
+          <%= link_to 'Următoarea pagină', grades_path(page: @page.next_number, q: request.params[:q]), data: { target: 'infinite-page.more' } unless @page.last? %>
         </div>
       </div>
     </div>
   </div>
 </section>
 
-<% content_for(:page_title, 'List of Grades') %>
+<% content_for(:page_title, 'Lista claselor') %>
