--- a/app/views/grades/new.html.erb
+++ b/app/views/grades/new.html.erb
@@ -1,16 +1,16 @@
 <section class="section">
   <div class="section-header d-mobile-none">
-    <h1>Grades</h1>
+    <h1>Clase</h1>
     <div class="section-header-breadcrumb">
-      <div class="breadcrumb-item"><%= link_to 'Dashboard', root_path %></div>
-      <div class="breadcrumb-item"><%= link_to 'Grades', grades_path %></div>
-      <div class="breadcrumb-item">New Grade</div>
+      <div class="breadcrumb-item"><%= link_to 'Panou de control', root_path %></div>
+      <div class="breadcrumb-item"><%= link_to 'Clase', grades_path %></div>
+      <div class="breadcrumb-item">Adaugă o clasă</div>
     </div>
   </div>
   <div class="section-body">
     <div class="card">
       <div class="card-header">
-        <h4>New Grade</h4>
+        <h4>Adaugă o clasă</h4>
       </div>
       <div class="card-body">
         <%= render 'form', grade: @grade %>
@@ -19,6 +19,6 @@
   </div>
 </section>
 
-<%= link_to icon('fas fa-arrow-left', 'Back'), 'javascript:history.back()', class: 'btn btn-icon icon-left btn-secondary d-mobile-none' %>
+<%= link_to icon('fas fa-arrow-left', 'Înapoi'), 'javascript:history.back()', class: 'btn btn-icon icon-left btn-secondary d-mobile-none' %>
 
-<% content_for(:page_title, 'New Grade') %>
+<% content_for(:page_title, 'Adaugă o clasă') %>
