--- a/app/views/grades/show.html.erb
+++ b/app/views/grades/show.html.erb
@@ -1,29 +1,60 @@
 <section class="section">
   <div class="section-header d-mobile-none">
-    <h1>Grades</h1>
+    <h1>Clase</h1>
     <div class="section-header-breadcrumb">
-      <div class="breadcrumb-item"><%= link_to 'Dashboard', root_path %></div>
-      <div class="breadcrumb-item"><%= link_to 'Grades', grades_path %></div>
-      <div class="breadcrumb-item">Show Grade</div>
+      <div class="breadcrumb-item"><%= link_to 'Panou de control', root_path %></div>
+      <div class="breadcrumb-item"><%= link_to 'Clase', grades_path %></div>
+      <div class="breadcrumb-item">Vizualizare clasă</div>
     </div>
   </div>
 
   <div class="section-body">
     <div class="card">
       <div class="card-header">
-        <h4>Show Grade</h4>
+        <h4>Clasa <%= @grade.name %></h4>
       </div>
       <div class="card-body">
         <dl class="row">
-          <dt class="col-sm-3">Name:</dt>
+          <dt class="col-sm-3">Nume:</dt>
           <dd class="col-sm-9"><%= @grade.name %></dd>
         </dl>
+        <h6>Elevi <span class="badge badge-info ml-2"><%= @grade.students.size %></span></h6>
+        <table class="table table-striped table-md">
+          <thead>
+            <tr>
+              <th></th>
+              <th><%= sort_link_turbo(@search, :first_name, "Prenume") %></th>
+              <th><%= sort_link_turbo(@search, :last_name, "Nume") %></th>
+              <th><%= sort_link_turbo(@search, :balance, "Bani rămași") %></th>
+              <th>Acțiuni</th>
+            </tr>
+          </thead>
+          <tbody data-target="infinite-page.container">
+            <% @students.each do |student| %>
+              <tr data-target="infinite-page.item">
+                <td>
+                  <%= link_to("<figure class=\"avatar mr-2 bg-primary text-white avatar-sm\" data-initial=\"#{(student.first_name[0] + student.last_name[0]).upcase}\"></figure>".html_safe, student) %>
+                </td>
+                <td><%= link_to student.first_name, student, style: "color: inherit;" %></td>
+                <td><%= link_to student.last_name, student, style: "color: inherit;" %></td>
+                <td class="student-balance" id="<%= student.id %>"><%= student.balance %> lei</td>
+                <td>
+                  <%= link_to icon('fas fa-eye'), student, title: 'Vizualizează', class: 'btn btn-icon btn-sm btn-info mr-1' %>
+                  <%= link_to icon('fas fa-edit'), edit_student_path(student), title: 'Modifică', class: 'btn btn-icon btn-sm btn-warning mr-1' %>
+                  <%= link_to icon('fas fa-trash'), student, title: 'Șterge', class: 'btn btn-icon btn-sm btn-danger', method: :delete, data: { confirm: 'Doriți să ștergeți elevul?', remote: true } %>
+                </td>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
+        <%= link_to(icon('fas fa-user-plus', ' Adaugă elev în clasă'), new_student_path(grade: @grade), class: "btn btn-icon btn-success") %>
       </div>
     </div>
   </div>
 </section>
 
-<%= link_to icon('fas fa-edit', 'Edit'), edit_grade_path(@grade), data: { turbolinks_action: 'replace' }, class: 'btn btn btn-icon icon-left btn-warning' %>
-<%= link_to icon('fas fa-arrow-left', 'Back'), 'javascript:history.back()', class: 'btn btn-icon icon-left btn-secondary d-mobile-none' %>
+<%= link_to icon('fas fa-edit', 'Modifică'), edit_grade_path(@grade), data: { turbolinks_action: 'replace' }, class: 'btn btn btn-icon icon-left btn-warning' %>
+<%= link_to icon('fas fa-trash', ' Șterge'), @student, class: 'btn btn-icon btn-danger', method: :delete, data: { confirm: 'Doriți să ștergeți clasa și, totodată, toți elevii din ea?', remote: true } %>
+<%= link_to icon('fas fa-arrow-left', 'Înapoi'), 'javascript:history.back()', class: 'btn btn-icon icon-left btn-secondary d-mobile-none' %>
 
 <% content_for(:page_title, 'Show Grade') %>
