--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,8 +1,8 @@
 <footer class="main-footer">
   <div class="footer-left">
-    Copyright &copy; 2018 <div class="bullet"></div> Design By <a href="https://nauval.in/">Muhamad Nauval Azhar</a>
+    &copy; 2020 <div class="bullet"></div> Creat de <a href="#">Tiberiu Frățilă</a>
   </div>
   <div class="footer-right">
-    2.3.0
+    1.0
   </div>
 </footer>
