--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -16,6 +16,6 @@
     <%= form.collection_select(:grade_id, Grade.all, :id, :name, {}, { class: 'form-control', data: { controller: 'select' } }) %>
   </div>
   <div class="card-footer pl-0">
-    <%= form.submit "Creează Elev", class: 'btn btn-success' %>
+    <%= form.submit "Trimite elevul", class: 'btn btn-success' %>
   </div>
 <% end %>
