--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -34,6 +34,7 @@
           <table class="table table-striped table-md">
             <thead>
               <tr>
+                <th></th>
                 <th><%= sort_link_turbo(@search, :first_name, "Prenume") %></th>
                 <th><%= sort_link_turbo(@search, :last_name, "Nume") %></th>
                 <th><%= sort_link_turbo(@search, :balance, "Bani rămași") %></th>
@@ -44,6 +45,9 @@
             <tbody data-target="infinite-page.container">
               <% @students.each do |student| %>
                 <tr data-target="infinite-page.item">
+                  <td>
+                    <%= link_to("<figure class=\"avatar mr-2 bg-primary text-white avatar-sm\" data-initial=\"#{(student.first_name[0] + student.last_name[0]).upcase}\"></figure>".html_safe, student) %>
+                  </td>
                   <td><%= link_to student.first_name, student, style: "color: inherit;" %></td>
                   <td><%= link_to student.last_name, student, style: "color: inherit;" %></td>
                   <td class="student-balance" id="<%= student.id %>"><%= student.balance %></td>
