--- a/app/views/grades/show.html.erb
+++ b/app/views/grades/show.html.erb
@@ -14,40 +14,57 @@
         <h4>Clasa <%= @grade.name %></h4>
       </div>
       <div class="card-body">
-        <dl class="row">
-          <dt class="col-sm-3">Nume:</dt>
-          <dd class="col-sm-9"><%= @grade.name %></dd>
-        </dl>
-        <h6>Elevi <span class="badge badge-info ml-2"><%= @grade.students.size %></span></h6>
-        <table class="table table-striped table-md">
-          <thead>
-            <tr>
-              <th></th>
-              <th><%= sort_link_turbo(@search, :first_name, "Prenume") %></th>
-              <th><%= sort_link_turbo(@search, :last_name, "Nume") %></th>
-              <th><%= sort_link_turbo(@search, :balance, "Bani rămași") %></th>
-              <th>Acțiuni</th>
-            </tr>
-          </thead>
-          <tbody data-target="infinite-page.container">
-            <% @students.each do |student| %>
-              <tr data-target="infinite-page.item">
-                <td>
-                  <%= link_to("<figure class=\"avatar mr-2 bg-primary text-white avatar-sm\" data-initial=\"#{(student.first_name[0] + student.last_name[0]).upcase}\"></figure>".html_safe, student) %>
-                </td>
-                <td><%= link_to student.first_name, student, style: "color: inherit;" %></td>
-                <td><%= link_to student.last_name, student, style: "color: inherit;" %></td>
-                <td class="student-balance" id="<%= student.id %>"><%= student.balance %> lei</td>
-                <td>
-                  <%= link_to icon('fas fa-eye'), student, title: 'Vizualizează', class: 'btn btn-icon btn-sm btn-info mr-1' %>
-                  <%= link_to icon('fas fa-edit'), edit_student_path(student), title: 'Modifică', class: 'btn btn-icon btn-sm btn-warning mr-1' %>
-                  <%= link_to icon('fas fa-trash'), student, title: 'Șterge', class: 'btn btn-icon btn-sm btn-danger', method: :delete, data: { confirm: 'Doriți să ștergeți elevul?', remote: true } %>
-                </td>
+        <% if @students.empty? %>
+          <div class="card">
+            <div class="card-header">
+              <h4>Nu există elevi</h4>
+            </div>
+            <div class="card-body">
+              <div class="empty-state" data-height="400" style="height: 400px;">
+                <div class="empty-state-icon">
+                  <i class="fas fa-question"></i>
+                </div>
+                <h2>Nu există niciun elev în această clasă</h2>
+                <p class="lead">
+                  Ne pare rău, nu am putut găsi niciun elev în această clasă. Pentru a înlătura acest mesaj, creează o intrare.
+                </p>
+                <%= link_to 'Creează un elev nou', new_student_path(grade: @grade), class: "btn btn-primary mt-4" %>
+                <a href="#" class="mt-4 bb">Ajutor</a>
+              </div>
+            </div>
+          </div>
+        <% else %>
+          <h6>Elevi <span class="badge badge-info ml-2"><%= @grade.students.size %></span></h6>
+          <table class="table table-striped table-md">
+            <thead>
+              <tr>
+                <th></th>
+                <th><%= sort_link_turbo(@search, :first_name, "Prenume") %></th>
+                <th><%= sort_link_turbo(@search, :last_name, "Nume") %></th>
+                <th><%= sort_link_turbo(@search, :balance, "Bani rămași") %></th>
+                <th>Acțiuni</th>
               </tr>
-            <% end %>
-          </tbody>
-        </table>
-        <%= link_to(icon('fas fa-user-plus', ' Adaugă elev în clasă'), new_student_path(grade: @grade), class: "btn btn-icon btn-success") %>
+            </thead>
+            <tbody data-target="infinite-page.container">
+              <% @students.each do |student| %>
+                <tr data-target="infinite-page.item">
+                  <td>
+                    <%= link_to("<figure class=\"avatar mr-2 bg-primary text-white avatar-sm\" data-initial=\"#{(student.first_name[0] + student.last_name[0]).upcase}\"></figure>".html_safe, student) %>
+                  </td>
+                  <td><%= link_to student.first_name, student, style: "color: inherit;" %></td>
+                  <td><%= link_to student.last_name, student, style: "color: inherit;" %></td>
+                  <td class="student-balance" id="<%= student.id %>"><%= student.balance %> lei</td>
+                  <td>
+                    <%= link_to icon('fas fa-eye'), student, title: 'Vizualizează', class: 'btn btn-icon btn-sm btn-info mr-1' %>
+                    <%= link_to icon('fas fa-edit'), edit_student_path(student), title: 'Modifică', class: 'btn btn-icon btn-sm btn-warning mr-1' %>
+                    <%= link_to icon('fas fa-trash'), student, title: 'Șterge', class: 'btn btn-icon btn-sm btn-danger', method: :delete, data: { confirm: 'Doriți să ștergeți elevul?', remote: true } %>
+                  </td>
+                </tr>
+              <% end %>
+            </tbody>
+          </table>
+          <%= link_to(icon('fas fa-user-plus', ' Adaugă elev în clasă'), new_student_path(grade: @grade), class: "btn btn-icon btn-success") %>
+        <% end %>
       </div>
     </div>
   </div>
