--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,9 +1,20 @@
 <section class="section">
   <div class="section-header d-mobile-none">
-    <h1>Dashboard</h1>
+    <h1>Panou de control</h1>
   </div>
-  <h1>Home#index</h1>
-  <p class="lead">Find me in app/views/home/index.html.erb</p>
+  <% unless admin_signed_in? %>
+    <div class="hero align-items-center bg-info text-white">
+      <div class="hero-inner text-center">
+        <h2>Bine ai venit</h2>
+        <p class="lead">Autentifică-te acum pentru a avea acces la panoul de control.</p>
+        <div class="mt-4">
+          <%= link_to(icon('fas fa-sign-in-alt', 'Autentificare'), new_admin_session_path, class: "btn btn-outline-white btn-lg btn-icon icon-left") %>
+        </div>
+      </div>
+    </div>
+  <% else %>
+      
+  <% end %>
 </section>
 
 <% content_for(:page_title, 'Dashboard') %>
