--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,30 @@
-<h2>Forgot your password?</h2>
+<div class="container mt-5">
+<div class="row">
+  <div class="col-12 col-sm-8 offset-sm-2 col-md-6 offset-md-3 col-lg-6 offset-lg-3 col-xl-4 offset-xl-4">
+    <div class="login-brand">
+      <%= image_tag("stisla-fill.svg", alt: "logo", class: "shadow-light rounded-circle", width: "100") %>
+    </div>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+    <div class="card card-primary">
+      <div class="card-header"><h4>Ai uitat parola?</h4></div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+      <div class="card-body">
+        <p class="text-muted">Îți vom trimite un e-mail cu instrucțiuni</p>
+        <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+          <div class="form-group">
+            <%= f.label :email, "Adresă de e-mail" %>
+            <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control" %>
+          </div>
+
+          <div class="form-group">
+            <%= f.submit "Am uitat parola", class: "btn btn-primary btn-lg btn-block"%>
+          </div>
+        <% end %>
+      </div>
+    </div>
+    <div class="simple-footer">
+      Copyright © Stisla 2018
+    </div>
   </div>
-
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
+</div>
