--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,34 +1,69 @@
-<h2>Sign up</h2>
+<div class="container mt-5">
+  <div class="row">
+    <div class="col-12 col-sm-8 offset-sm-2 col-md-6 offset-md-3 col-lg-6 offset-lg-3 col-xl-4 offset-xl-4">
+      <div class="login-brand">
+        <%= image_tag("stisla-fill.svg", alt: "logo", class: "shadow-light rounded-circle", width: "100") %>
+      </div>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+      <div class="card card-primary">
+        <div class="card-header"><h4>Înregistrare</h4></div>
 
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name, autofocus: true, autocomplete: "name" %>
+        <div class="card-body">
+          <% resource.errors.full_messages.each do |msg| %>
+            <div class="card bg-danger">
+              <div class="card-body">
+                <%= msg %>
+              </div>
+            </div>
+          <% end %>
+
+
+          <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: {class: "needs-validation", novalidate: ""}) do |f| %>
+            <div class="form-group">
+              <%= f.label :name, "Nume" %>
+              <%= f.text_field :name, autofocus: true, autocomplete: "name", class: "form-control", required: "" %>
+              <div class="invalid-feedback">
+                Te rugăm să completezi numele
+              </div>
+            </div>
+
+            <div class="form-group">
+              <%= f.label :email, "Adresă de e-mail" %>
+              <%= f.email_field :email, autocomplete: "email", class: "form-control", autofocus: true, required: "" %>
+              <div class="invalid-feedback">
+                Te rugăm să completezi adresa de e-mail
+              </div>
+            </div>
+
+            <div class="form-group">
+              <%= f.label :password, "Parolă", class: "control-label" %>
+              <%= f.password_field :password, autocomplete: "new-password", class: "form-control", required: "" %>
+              <small id="passwordHelp" class="form-text text-muted">Minimum <%= @minimum_password_length %> caractere</small>
+              <div class="invalid-feedback">
+                Te rugăm să confirmi parola
+              </div>
+            </div>
+
+            <div class="form-group">
+              <%= f.label :password_confirmation, "Confirmă parola", class: "control-label" %>
+              <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control", required: "" %>
+              <div class="invalid-feedback">
+                Te rugăm să confirmi parola
+              </div>
+            </div>
+
+            <div class="form-group">
+              <%= f.submit "Înregistrează-te", class: "btn btn-primary btn-lg btn-block" %>
+            </div>
+          <% end %>
+        </div>
+      </div>
+      <div class="mt-5 text-muted text-center">
+        Ai deja un cont? <%= link_to "Autentifică-te", new_session_path(resource_name) %>
+      </div>
+      <div class="simple-footer">
+        © 2020
+      </div>
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autocomplete: "email" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
