Change link names

--- a/app/views/departments/show.html.erb
+++ b/app/views/departments/show.html.erb
@@ -56,7 +56,7 @@
   </div>
 </section>
 
-<%= link_to icon('fas fa-edit', 'Edit'), edit_department_path(@department), data: { turbolinks_action: 'replace' }, class: 'btn btn btn-icon icon-left btn-warning' %>
-<%= link_to icon('fas fa-arrow-left', 'Back'), 'javascript:history.back()', class: 'btn btn-icon icon-left btn-secondary d-mobile-none' %>
+<%= link_to icon('fas fa-edit', 'Modifică'), edit_department_path(@department), data: { turbolinks_action: 'replace' }, class: 'btn btn btn-icon icon-left btn-warning' %>
+<%= link_to icon('fas fa-arrow-left', 'Înapoi'), 'javascript:history.back()', class: 'btn btn-icon icon-left btn-secondary d-mobile-none' %>
 
 <% content_for(:page_title, 'Vizualizare departament') %>
