--- a/app/views/stands/show.html.erb
+++ b/app/views/stands/show.html.erb
@@ -1,29 +1,60 @@
 <section class="section">
   <div class="section-header d-mobile-none">
-    <h1>Stands</h1>
+    <h1>Standuri</h1>
     <div class="section-header-breadcrumb">
-      <div class="breadcrumb-item"><%= link_to 'Dashboard', root_path %></div>
-      <div class="breadcrumb-item"><%= link_to 'Stands', stands_path %></div>
-      <div class="breadcrumb-item">Show Stand</div>
+      <div class="breadcrumb-item"><%= link_to 'Panou de control', root_path %></div>
+      <div class="breadcrumb-item"><%= link_to 'Standuri', stands_path %></div>
+      <div class="breadcrumb-item">Vizualizare stand</div>
     </div>
   </div>
 
   <div class="section-body">
     <div class="card">
       <div class="card-header">
-        <h4>Show Stand</h4>
+        <h4>Vizualizare stand</h4>
       </div>
       <div class="card-body">
-        <dl class="row">
-          <dt class="col-sm-3">Name:</dt>
-          <dd class="col-sm-9"><%= @stand.name %></dd>
-        </dl>
+        <% unless @stand.volunteers.empty? %>
+          <h6>Voluntari <span class="badge badge-info ml-2"><%= @stand.volunteers.size %></span></h6>
+          <div class="table-responsive">
+            <table class="table table-striped table-md">
+              <thead>
+                <tr>
+                  <th><%= sort_link_turbo(@search, :name) %></th>
+                  <th><%= sort_link_turbo(@search, :grade) %></th>
+                  <th><%= sort_link_turbo(@search, :email) %></th>
+                  <th><%= sort_link_turbo(@search, :phone) %></th>
+                  <th><%= sort_link_turbo(@search, :departments) %></th>
+                  <th><%= sort_link_turbo(@search, :jobs) %></th>
+                  <th>Acțiuni</th>
+                </tr>
+              </thead>
+              <tbody data-target="infinite-page.container">
+                <% @stand.volunteers.each do |volunteer| %>
+                  <tr data-target="infinite-page.item">
+                    <td><%= link_to volunteer.name, volunteer %></td>
+                    <td><%= link_to volunteer.grade.name, volunteer.grade, class: "badge badge-primary" %></td>
+                    <td><%= volunteer.email %></td>
+                    <td><%= volunteer.phone %></td>
+                    <td><%= link_to volunteer.departments.first.name, volunteer.departments.first, class: "badge badge-info" %></td>
+                    <td><%= link_to volunteer.jobs.first.name, volunteer.jobs.first, class: "badge badge-light" %></td>
+                    <td>
+                      <%= link_to icon('fas fa-eye'), volunteer, title: 'Vizualizează', class: 'btn btn-icon btn-sm btn-info mr-1' %>
+                      <%= link_to icon('fas fa-edit'), edit_volunteer_path(volunteer), title: 'Modifică', class: 'btn btn-icon btn-sm btn-warning mr-1' %>
+                      <%= link_to icon('fas fa-trash'), volunteer, title: 'Șterge', class: 'btn btn-icon btn-sm btn-danger', method: :delete, data: { confirm: 'Are you sure?', remote: true } %>
+                    </td>
+                  </tr>
+                <% end %>
+              </tbody>
+            </table>
+          </div>
+        <% end %>
       </div>
     </div>
   </div>
 </section>
 
-<%= link_to icon('fas fa-edit', 'Edit'), edit_stand_path(@stand), data: { turbolinks_action: 'replace' }, class: 'btn btn btn-icon icon-left btn-warning' %>
-<%= link_to icon('fas fa-arrow-left', 'Back'), 'javascript:history.back()', class: 'btn btn-icon icon-left btn-secondary d-mobile-none' %>
+<%= link_to icon('fas fa-edit', 'Modifică'), edit_stand_path(@stand), data: { turbolinks_action: 'replace' }, class: 'btn btn btn-icon icon-left btn-warning' %>
+<%= link_to icon('fas fa-arrow-left', 'Înapoi'), 'javascript:history.back()', class: 'btn btn-icon icon-left btn-secondary d-mobile-none' %>
 
-<% content_for(:page_title, 'Show Stand') %>
+<% content_for(:page_title, 'Vizualizare stand') %>
