--- a/app/views/volunteers/index.html.erb
+++ b/app/views/volunteers/index.html.erb
@@ -47,13 +47,13 @@
             <tbody data-target="infinite-page.container">
               <% @volunteers.each do |volunteer| %>
                 <tr data-target="infinite-page.item">
-                  <td><%= link_to volunteer.name, volunteer, style: "color: inherit;" %></td>
-                  <td><%= volunteer.grade.name %></td>
+                  <td><%= link_to volunteer.name, volunteer, style: "color: inherit" %></td>
+                  <td><%= link_to volunteer.grade.name, volunteer.grade, class: "badge badge-primary" %></td>
                   <td><%= volunteer.email %></td>
                   <td><%= volunteer.phone %></td>
-                  <td><%= volunteer.jobs.first.name %></td>
-                  <td><%= volunteer.departments.first.name %></td>
-                  <td><%= volunteer.stands.first.name %></td>
+                  <td><%= link_to volunteer.jobs.first.name, volunteer.jobs.first, class: "badge badge-light" %></td>
+                  <td><%= link_to volunteer.departments.first.name, volunteer.departments.first, class: "badge badge-info" %></td>
+                  <td><%= link_to volunteer.stands.first.name, volunteer.stands.first, class: "badge badge-warning" %></td>
                   <td>
                     <%= link_to icon('fas fa-eye'), volunteer, title: 'Vizualizează', class: 'btn btn-icon btn-sm btn-info mr-1' %>
                     <%= link_to icon('fas fa-edit'), edit_volunteer_path(volunteer), title: 'Modifică', class: 'btn btn-icon btn-sm btn-warning mr-1' %>
