--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -34,7 +34,6 @@
           <table class="table table-striped table-md">
             <thead>
               <tr>
-                <th></th>
                 <th><%= sort_link_turbo(@search, :first_name, "Prenume") %></th>
                 <th><%= sort_link_turbo(@search, :last_name, "Nume") %></th>
                 <th><%= sort_link_turbo(@search, :balance, "Bani rămași") %></th>
@@ -45,13 +44,10 @@
             <tbody data-target="infinite-page.container">
               <% @students.each do |student| %>
                 <tr data-target="infinite-page.item">
-                  <td>
-                    <%= link_to("<figure class=\"avatar mr-2 bg-primary text-white avatar-sm\" data-initial=\"#{(student.first_name[0] + student.last_name[0]).upcase}\"></figure>".html_safe, student) %>
-                  </td>
                   <td><%= link_to student.first_name, student, style: "color: inherit;" %></td>
                   <td><%= link_to student.last_name, student, style: "color: inherit;" %></td>
                   <td class="student-balance" id="<%= student.id %>"><%= student.balance %></td>
-                  <td><%= link_to student.grade.name, student.grade, style: "color: inherit;" %></td>
+                  <td><%= link_to student.grade.name, student.grade, class: "badge badge-primary" %></td>
                   <td>
                     <%= link_to icon('fas fa-eye'), student, title: 'Vizualizează', class: 'btn btn-icon btn-sm btn-info mr-1' %>
                     <%= link_to icon('fas fa-edit'), edit_student_path(student), title: 'Modifică', class: 'btn btn-icon btn-sm btn-warning mr-1' %>
