--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
         <div class="main-content">
           <%= content_for?(:content) ? yield(:content) : yield %>
         </div>
-        <%= render 'shared/footer' %>
+        <#= render 'shared/footer' %>
       </div>
     </div>
     <%= render 'shared/toastr' %>
