--- a/app/views/stands/index.html.erb
+++ b/app/views/stands/index.html.erb
@@ -20,16 +20,16 @@
         </div>
       </div>
       <div class="card-body" data-controller="infinite-page">
-        <!--
-        <#= search_form_for @search, remote: true, data: { controller: 'turbolinks-form' }, html: { class: 'form-row' } do |f| #>
+        
+        <%= search_form_for @search, remote: true, data: { controller: 'turbolinks-form' }, html: { class: 'form-row' } do |f| %>
           <div class="form-group col-sm-10">
-            <#= f.text_field :name_cont, class: 'form-control m-input m-input--solid', placeholder: 'Name' #>
+            <%= f.text_field :name_cont, class: 'form-control m-input m-input--solid', placeholder: 'Caută după nume...' %>
           </div>
           <div class="form-group col-sm-2 text-right">
-            <#= f.button icon('fas fa-search', 'Search'), name: nil, class: 'btn btn-icon icon-left btn-primary' #>
+            <%= f.button icon('fas fa-search', 'Caută'), name: nil, class: 'btn btn-icon icon-left btn-primary' %>
           </div>
-        <# end #>
-        -->
+        <% end %>
+        
         <div class="table-responsive">
           <table class="table table-striped table-md">
             <thead>
