--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -20,16 +20,16 @@
         </div>
       </div>
       <div class="card-body" data-controller="infinite-page">
-        <!--
-        <#= search_form_for @search, remote: true, data: { controller: 'turbolinks-form' }, html: { class: 'form-row' } do |f| #>
+        
+        <%= search_form_for @search, remote: true, data: { controller: 'turbolinks-form' }, html: { class: 'form-row' } do |f| %>
           <div class="form-group col-sm-10">
-            <#= f.text_field :name_cont, class: 'form-control m-input m-input--solid', placeholder: 'Name' #>
+            <%= f.text_field :first_name_or_last_name_cont, class: 'form-control m-input m-input--solid', placeholder: 'Caută după prenume sau nume...' %>
           </div>
           <div class="form-group col-sm-2 text-right">
-            <#= f.button icon('fas fa-search', 'Search'), name: nil, class: 'btn btn-icon icon-left btn-primary' #>
+            <%= f.button icon('fas fa-search', 'Caută'), name: nil, class: 'btn btn-icon icon-left btn-primary' %>
           </div>
-        <# end #>
-        -->
+        <% end %>
+        
         <div class="table-responsive">
           <table class="table table-striped table-md">
             <thead>
@@ -37,7 +37,7 @@
                 <th><%= sort_link_turbo(@search, :first_name, "Prenume") %></th>
                 <th><%= sort_link_turbo(@search, :last_name, "Nume") %></th>
                 <th><%= sort_link_turbo(@search, :balance, "Bani rămași") %></th>
-                <th><%= sort_link_turbo(@search, :grade, "Clasa") %></th>
+                <th><%= sort_link_turbo(@search, :grade_name, "Clasa") %></th>
                 <th>Acțiuni</th>
               </tr>
             </thead>
